# modelstorage

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
modelstorage/: __init__.py  cli.py
modelstorage/server/: __init__.py  app.py  utils.py  views.py
modelstorage/server/templates/: home.html
